# lapis-rs

./: .gitignore  CSC.txt  Cargo.toml  README.md  TIMES  log4rs.yaml
examples/: dk_int.dk  dk_nat.dk  nat.dk  vec.dk
examples/focalide/: additive_law.dk  and_or.dk  answer.dk  arrays.dk  arrays_externals.dk  assoc_map1.dk  assoc_map3.dk  basic_induct.dk  basic_type.dk  basics.dk  builtins.dk  case_simple.dk  constants.dk  couplage.dk  diag.dk  div.dk  dk_binary_nat.dk  dk_bool.dk  dk_builtins.dk  dk_char.dk  dk_fail.dk  dk_int.dk  dk_list.dk  dk_logic.dk  dk_machine_int.dk  dk_opt.dk  dk_string.dk  dk_sum.dk  dk_tuple.dk  etat_vote.dk  ex_implications.dk  ex_implications2.dk  fix.dk  focal.dk  gen_def.dk  gen_vote.dk  hello.dk  int_loose_sets.dk  integers.dk  iterators.dk  (+49 more)
examples/matita-light/: cic.dk  matita_arithmetics_bigops.dk  matita_arithmetics_binomial.dk  matita_arithmetics_bounded_quantifiers.dk  matita_arithmetics_chebyshev_bertrand.dk  matita_arithmetics_chebyshev_bertrand256.dk  matita_arithmetics_chebyshev_chebyshev_psi.dk  matita_arithmetics_chebyshev_chebyshev_theta.dk  matita_arithmetics_chebyshev_factorization.dk  matita_arithmetics_chebyshev_psi_bounds.dk  matita_arithmetics_chinese_reminder.dk  matita_arithmetics_congruence.dk  matita_arithmetics_div_and_mod.dk  matita_arithmetics_exp.dk  matita_arithmetics_factorial.dk  matita_arithmetics_fermat_little_theorem.dk  matita_arithmetics_gcd.dk  matita_arithmetics_iteration.dk  matita_arithmetics_log.dk  matita_arithmetics_lstar.dk  (+14 more)
src/: check.rs  lgraph.rs  lnode.rs  main.rs  parser.rs  utils.rs
