[package]
name = "lapis-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dedukti-parse="0.3.1"
indicatif = "0.17.7"
lazy_static = "1.4.0"
log = "0.4.20"
test-log = "0.2.13"

[dev-dependencies]
env_logger = "0.10.0"
log4rs = "1.2.0"
